# voz-local

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: sign-dev.sh
src/: app.html
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  history.rs  lib.rs  main.rs  mic_permission.rs  settings.rs  shortcut.rs  transcription.rs
src/routes/: +page.svelte
src/routes/widget/: +page.svelte
