[package]
name = "voz-local"
version = "0.1.0"
description = "Voz Local - transcripción de voz a texto 100% local"
authors = ["you"]
edition = "2021"

[lib]
name = "voz_local_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-ico", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"

# Audio capture
cpal = "0.15"

# Whisper transcription
whisper-rs = { version = "0.14", features = ["metal"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString"] }
block2 = "0.6"
window-vibrancy = "0.6"
